css/main.css
body {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 17px;
  color: #775555;
  line-height: 1.6;
  margin: 0;
}

.page-header {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  background-image: url('../img/header-bg.jpeg');
  background-size: cover;
  background-position: center;
  height: 100vh;
  padding: 0 20px;
}

.page-header h1 {
  margin: 0;
  font-size: 50px;
  line-height: 1.2;
}

.page-header p {
  font-size: 25px;
}

.page-header .button {
  text-decoration: none;
  font-style: 18px;
  color: #462810;
  border: #462810 2px solid;
  padding: 10px 20px;
  border-radius: 10px;
}

.page-header .button:hover {
  border-color: #ff8c1a;
  color: #ff8c1a;
}

.text-sec {
  margin: 0;
}

.text-sec h2 {
  text-align: left;
  margin: 0;
  font-size: 40px;
}

.flex-row-reversed {
  display: flex;
  flex-direction: row-reverse;
  height: 600px;
}

.flex-row {
  display: flex;
  flex-direction: row;
  height: 600px;
}

.text-sec article p {
  font-size: 28px;
}

.text-sec img {
  height: 100%;
  width: 50%;
  flex-basis: 0;
  flex-grow: 1;
}


.text-sec article {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 0 20px;
  flex-grow: 1;
  flex-basis: 0;
  width: 50%;
  height: 100%;
}

.tech {
  padding: 10px 30px;
}

.tech h2 {
  text-align: center;
  font-size: 40px;
}

.tech img {
  width: 250px;
  height: 250px;
}

.tech .html-logo path {
  fill: #e34f26;
}

.tech .css-logo path {
  fill: #0079c1;
}


.tech .laravel-logo path {
  fill: #f55247;
}

.tech figure {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.tech figcaption {
  padding-top: 30px;
  font-size: 30px;
  font-weight: 700;
}

.tech .html-logo figcaption, .tech .css-logo figcaption {
  text-transform: uppercase;
}

.tech article {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  padding: 0 50px;
}

.services {
  background: url('../img/contact-bg.jpg') 100% no-repeat;
  position: relative;
  z-index: 1;
  background-size:cover;
  color: #ffffff;
}

.services:before{
  display: block;
  position: absolute;
  content: "";
  /* background: rgba(22, 22, 22, 0.7); */
  background: rgba(41, 40, 40, 0.83);
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: -1;
}

.services h2 {
  margin: 0;
  text-align: center;
  font-size: 40px;
  padding: 20px 0;
  margin-left: -80px;
}

.services article {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  padding: 0 120px;
  margin: 0 90px;
}

.services article img {
  width: 90px;
  height: 90px;
}

.services figure {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.services figcaption {
  padding: 30px 0;
  font-size: 25px;
  font-weight: 700;
}

.contact h2 {
  margin: 0;
  text-align: center;
  font-size: 40px;
  padding: 20px 0;

}


.contact figure {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.contact article {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  padding: 15px 250px;
}

.contact article img {
  width: 50px;
  height: 50px;
}

.contact {
  background: #2e2e2e;
  color: #b4b3b6;
}

.contact figcaption {
  padding: 10px 20px;
  font-size: 20px;
  font-weight: 700;
}

.sign-up {
  background: #2e2e2e;
  color: #ffffff;
  font-size: 30px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.sign-up h2 {
  padding: 15px 15px;
  background: #b3641a;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
  margin: 0;
}

.sign-up div {
  display: flex;
  flex-direction: column;
  align-items: left;
  text-align: left;
}

.sign-up input, .sign-up textarea {
  border-radius: 10px;
 
  border: 0px;
  height: 40px;
  width: 400px;
  background: #58575a;
  font-size: 20px;
  padding: 5px;
  color: #ffffff;
  box-shadow: none;
}

.sign-up input::-moz-placeholder, .sign-up textarea::-moz-placeholder {
  color: #e9e9e9;
}

.sign-up input::-webkit-input-placeholder, .sign-up textarea::-webkit-input-placeholder {
  color: #e9e9e9;
 }

 .sign-up input::placeholder, .sign-up textarea::placeholder {
   color: #e9e9e9;
 }

 .sign-up input:focus, .sign-up textarea:focus {
   background: #6e6d70;
   
   outline: none;
 }

.sign-up label {
  visibility: hidden;
}

.sign-up textarea {
  height: 140px;
  width: 400px;
}

.sign-up button {
  margin: 15px 0;
  text-decoration: none;
  font-style: 18px;
  color: #462810;
  border: #462810 2px solid;
  padding: 10px 20px;
  border-radius: 10px;
  outline: none;
  cursor: pointer;
}

.sign-up button:active {
  position: relative;
  top: 2px;
  left: 2px;
}

.page-footer {
  background: #e9e9e9;
  background-position: bottom;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

.page-footer a{
  padding: 10px 10px;
}

.page-footer p {
  padding: 0 20px 0 30px;
  font-size: 25px;
}

@media (max-width: 1500px) {
  .contact article {
    padding: 15px 50px;
}

.services article {
  padding: 0;
}

.tech figure {
  
  width: 40%;
}

@media (max-width: 1320px) {
  .text-sec article p {
    padding: 0 20px 20px 20px;;
    font-size: 22px;
  }

  .text-sec h2 {
    margin: 12px;
  }

@media (max-width: 1480px) {
.services article {
  margin: 0 10px;
}

.services h2 {
  margin-left: 0;
}
}



@media (max-width: 1070px) {
  .contact figure {
    width: 100%;
  }

  .contact figcaption {
    font-size: 30px;
  }

  .contact .email {
    margin-left: 140px;
  }

  .contact .address {
    margin-left: 60px;
  }
}

@media (max-width: 1150px) {
  .services article {
    flex-direction: column;
    flex-wrap: wrap;
  }
}


@media (max-width: 976px) {
  .tech article {
    justify-content: center;
  }
}

@media (max-width: 920px) {
  .text-sec img {
    display: none;
  }
}

@media (max-width: 670px) {
  .contact figcaption {
    font-size: 20px;
  }

  .contact figure {
    margin-left: 0;
  }

  .contact article {
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .contact .email {
    margin-right: 120px;
  }

  .contact .address {
    margin-right: 90px;
  }
}

@media (max-width: 540px) {
  .services h2 {
    font-size: 35px;
  }
}

@media (max-width: 500px) {
  .sign-up input, .sign-up textarea {
    width: 300px;
  }
}

@media (max-width: 490px) {
  .services h2 {
    font-size: 30px;
  }
}

@media (max-width: 460px) {
  .page-footer p {
    font-size: 20px;
  }

  .page-footer img {
    width: 25px;
    height: 25px;
  }
}

@media (max-width: 450px) {
  .text-sec h2 {
    font-size: 30px;
  }
}

@media (max-width: 430px) {
  .text-sec article p {
    font-size: 18px;
  }
}

@media (max-width: 400px) {
  .sign-up input, .sign-up textarea {
    width: 250px;
  }
}

